Fixed the mobile display, it now uses a fixed div which covers the whole page.  Starting freebase search, which is a better search and uses musicbrainz for music, now just getting more info of that song. :D I also cleaned up the routes.php, it uses the controller route, which is even better. :D

--- a/public/assets/css/users.css
+++ b/public/assets/css/users.css
@@ -19,26 +19,31 @@
   background-color: rgba(255, 255, 255, 0.85);
 }
 
-body {
+.background {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
   -webkit-background-size: cover; /* Safari 3-4 */
-          background-size: cover; /* Chrome, Firefox 4+, IE 9+, Opera, Safari 5+ */
+          background-size: cover !important; /* Chrome, Firefox 4+, IE 9+, Opera, Safari 5+ */
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
 @media (max-width: 768px) {
-  body {
+  .background {
     background-image: url("http://lorempixel.com/768/432/cats");
   }
 }
 @media (min-width: 768px) and (max-width: 992px) {
-  body {
+  .background {
     background-image: url("http://lorempixel.com/992/558/cats");
   }
 }
 @media (min-width: 992px) {
-  body {
+  .background {
     background-image: url("http://lorempixel.com/1920/1080/cats");
   }
 }
